<resources xmlns:tools="http://schemas.android.com/tools">

    <!--landing_page-->
    <string name="app_name">faculty_service_tracker</string>
    <string name="tup_logo">logo</string>
    <string name="title">Faculty Service Tracker</string>
    <string name="login_btn">Login</string>

    <!--TeacherHomePage-->
    <string name="title2">Who Are You</string>
    <string name="btn_teacher">Teacher</string>
    <string name="btn_admin">Admin</string>

    <!--LoginPage-->
    <string name="edit_txt_password">Password</string>
    <string name="txt_view_login">Log in</string>
    <string name="edit_txt_email">Please enter your TUP email</string>
    <string name="btn_login">Login</string>
    <string name="ic_back">back_btn</string>
    <string name="user_email">Please enter your TUP email</string>
    <string name="user_pass">Password</string>

    <!--wave_layout.xml-->
    <string name="rectangular">ic_rectangle</string>
    <string name="wave_1" tools:ignore="Typos">ic_wave1</string>
    <string name="wave_3">ic_wave3</string>
    <string name="wave_2">ic_wave2</string>

    <!--thp_bottom_toolbarxml-->
    <string name="img_notif_btn">notification button</string>
    <string name="img_profile_btn">profile button</string>
    <string name="img_home_btn">home button</string>


    <!--thp_top_toolbar.xml-->
    <string name="imgView_tupLogo">TUP logo</string>
    <string name="txtView_teacherList">"Teachers List"</string>
    <string name="img_search_btn">search button</string>

    <!--thp_top_toolbar_services.xml-->
    <string name="teachers_list">Teachers List</string>
    <string name="txtView_services">Services</string>
    <string name="imgView_searchBtn">Search button</string>

    <!--thp_top_toolbar_notif_page.xml-->
    <string name="imgView_back_btn">back button</string>
    <string name="txtView_notif">Notification</string>


    <!-- string array names -->
    <string-array name="teacher_notif_names_txt">
        <item>Marvin Abrasaldo</item>
        <item>Paolo Gonzales</item>
        <item>Joshua Zion Olano</item>
        <item>Micah Guinto</item>
        <item>Rose Marie Nituda</item>
        <item>Marie Tes</item>
        <item>Juswa Pogi</item>
        <item>Tesda Man</item>
        <item>Bur nick</item>
        <item>Yunik Garcia</item>
    </string-array>

    <!-- service Card description  -->
    <string name="imgDesc">image</string>
    <string name="date">Date</string>
    <string name="event">Event</string>
    <string name="venue">Venue</string>


    <!--item recycler_teacher_home-->
    <string name="imgview">image view</string>
    <string name="txtview">Position:</string>
    <string name="txtView">Total Credits:</string>
    <string name="tvName">Joshua Zion Olano</string>
    <string name="tvPosition">Asssistant Professor</string>
    <string name="tvCredits">100</string>
    <string name="main_container">container</string>

    <!--item_recycler_teacher_notif_page-->
    <string name="imgView">image</string>
    <string name="txtName">Joshua Zion Olano</string>
    <string name="txtNoticee">uploaded his Office Order and it is for review</string>

    <!--activity_profile_page-->
    <string name="tvProfile">Profile</string>
    <string name="tvProfileName">Brent Locke</string>
    <string name="btn_EditProfile">Edit Profile</string>
    <string name="btn_LogOut">Log Out</string>
    <string name="imProfile">image</string>

    <!--activity_profile_details_page-->
    <string name="tvProfilePic">Profile Picture</string>
    <string name="btn_edit">Edit</string>
    <string name="tvLogInDetails">Log In Details</string>
    <string name="tvEmail">Email:</string>
    <string name="tv_InputEmail">brent_locke@tup.edu.ph</string>
    <string name="tvPassword">Password:</string>
    <string name="btn_change">Change</string>
    <string name="tvFullName">Full Name:</string>
    <string name="tvPersonalInfo">Personal Information</string>
    <string name="btn_Edit1">Edit</string>
    <string name="tvInputName">Brent Locke</string>
    <string name="tv_Position">Position:</string>
    <string name="tvInputPosition">Professor</string>
    <string name="tvGender">Gender:</string>
    <string name="tvInputGender">Male</string>

    <!--activity_edit_account_page-->
    <string name="tvEditProfile">Edit Profile</string>
    <string name="tvfirstname" />
    <string name="tvMidName" />
    <string name="tvSurname" />
    <string name="name">First Name</string>
    <string name="hint2">Manuel</string>
    <string name="hint3">Dela Cruz</string>
    <string name="RB_Male">Male</string>
    <string name="RB_Female">Female</string>
    <string name="tvInputPosition1" />
    <string name="hint_position">Instructor</string>
    <string name="btn_save">Save</string>

    <!--activity_change_password_page-->
    <string name="tvChangePassword">Change Password</string>
    <string name="hint_OldPassword">Old Password</string>
    <string name="tv_enterOldPassword">Please enter your old password</string>
    <string name="tv_enterNewPassword">Please enter your new password</string>
    <string name="tv_NewPassword" />
    <string name="hint_NewPassword">New Password</string>
    <string name="tvOldPassword" />
    <string name="tv_RetypePassword" />
    <string name="hint_RetypePassword">Retype Password</string>


    <!--string array names TeacherHomeDataModel-->
    <string-array name="teacher_home_names_txt">
        <item>Marvin Abrasaldo</item>
        <item>Paolo Gonzales</item>
        <item>Joshua Zion Olano</item>
        <item>Micah Guinto</item>
        <item>Rose Marie Nituda</item>
        <item>Marie Tes</item>
        <item>Juswa Pogi</item>
        <item>Tesda Man</item>
        <item>Bur nick</item>
        <item>Yunik Garcia</item>
    </string-array>

    <!--string array positions Teacher-->
    <string-array name="teacher_home_positions_txt">
        <item>Assistant Professor</item>
        <item>Professor</item>
        <item>Assistant Instructor</item>
        <item>Instructor</item>
        <item>Professor</item>
        <item>Faculty</item>
        <item>Assistant</item>
        <item>Assistant Professor</item>
        <item>Assistant Instructor</item>
        <item>Assistant Professor</item>
    </string-array>

    <!--string array credits Teacher-->
    <string-array name="teacher_home_credits_txt">
        <item>100</item>
        <item>98</item>
        <item>89</item>
        <item>70</item>
        <item>59</item>
        <item>35</item>
        <item>31</item>
        <item>30</item>
        <item>29</item>
        <item>20</item>
    </string-array>

    <!-- create_services.xml -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selection">Select Position</string>
    <string name="btn_AdminEditProfile">Edit Profile</string>
    <string name="btn_add">Add Account</string>
    <string name="btn_adminLogout">Logout</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="acc_info">Account Information</string>
    <string name="email_add">Email Address</string>
    <string name="acc_type">Account Type</string>
    <string name="teacher">Teacher</string>
    <string name="admin">Admin</string>
    <string name="create_account">Create</string>
    <string name="acc_type_admin">Admin</string>
    <string name="edit_ic">edit icon</string>
    <string name="edit_profile">Edit</string>
    <string name="create_acc">Create Account</string>
    <string name="chang_pass">Change Password</string>
    <string name="confirm">Confirm</string>

    <!--  thp_toptoolbar_teacher_create_services  -->
    <string name="back_btn">back_btn</string>
    <string name="create_services">Create Services</string>

    <!--  fragment_d_r_a.xml  -->
    <string name="txtView_upload_your_dra">Upload your DRA</string>
    <string name="DRA_img">ImageViewDRA</string>
    <string name="button_next">Next</string>

    <!--  fragment_event_details.xml  -->
    <string name="textView_event_details">Event Details</string>
    <string name="event_name">Event Name</string>
    <string name="sponsor">Sponsor</string>
    <string name="event_type">Event Type</string>
    <string name="radioButton_local">Local</string>
    <string name="radioButton_international">International</string>
    <string name="textView_starting_date">Starting Date</string>
    <string name="starting_mm_dd_yy">mm/dd/yy</string>
    <string name="ending_date">Ending Date</string>
    <string name="calendar_start">ic_calendar_start</string>
    <string name="ending_mm_dd_yy">mm/dd/yy</string>
    <string name="calendar_end">ic_calendar_end</string>

    <!--  fragment_office_order  -->
    <string name="txtView_upload_your_office_order">Upload your Office Order</string>
    <string name="office_order_img">office order imageView</string>
    <!--  fragment_photo_bg.xml  -->
    <string name="uptxtView_load_your_photo_background">Upload your Photo Background</string>
    <string name="photo_background_imgView">photo background imageView</string>
    <!--  fragment_terminal_report  -->
    <string name="txtView_upload_your_terminal_report">Upload your Terminal Report</string>
    <string name="TR_img">terminal report imageView</string>

    <!--  thp_toptoolbar_form_review  -->
    <string name="Back_btn">back button form review page</string>

    <!--  activity_form_review_page1.xml  activity_form_review_page2.xml -->
    <string name="text_view">Review Service Credits</string>
    <string name="service_details">Service Details</string>
    <string name="office_order">Office Order</string>
    <string name="dra">DRA</string>
    <string name="terminal_report">Terminal Report</string>
    <string name="claim_service_credit">Claim Service Credit</string>
    <string name="text_view2">Please attach the details of your \n Service Credits</string>
    <string name="upload">UPLOAD</string>
    <string name="upload_new_pic">Upload Your New Profile Picture</string>
    <string name="new_profile">Upload Profile</string>
    <string name="createAccc">Create Account</string>
    <string name="total_credit_head">Total Credit</string>
    <string name="total_credit_val">total_credit</string>
    <string name="level_ofevent_head">Level Of Event</string>
    <string name="sponsor_head">Sponsor</string>
    <string name="sponsor_value">sponsor_val</string>
    <string name="venue_head">Venue</string>
    <string name="venue_val">venue_val</string>
    <string name="start_date_val">start_date</string>
    <string name="starting_date_head">Starting Date</string>
    <string name="ending_date_head">Ending Date</string>
    <string name="end_date_val">end_date_val</string>
    <string name="details">Details</string>
    <string name="review">Review</string>
    <string name="service_page">Service Details</string>
    <string name="create_service_btn">create_service</string>
    <string name="heading_title">Heading Title</string>
    <string name="create_service_form">Create Service</string>
    <string name="profile_details">Prodile Details</string>


</resources>