<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChangePassword">

    <include
        android:id="@+id/include12"
        layout="@layout/thp_top_toolbar_edit_account_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/L_EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include12">

        <LinearLayout
            android:id="@+id/L_OldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_enterOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/tv_enterOldPassword"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/tvOldPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:hint="@string/hint_OldPassword"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:text="@string/tvOldPassword"
                android:textColor="#000000"
                android:textColorHint="#A1887F"
                android:textSize="20sp"
                android:autofillHints="password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/L_NewPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_enterNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/tv_enterNewPassword"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/tv_NewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/custom_input"
                android:hint="@string/hint_NewPassword"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:text="@string/tv_NewPassword"
                android:textColor="#000000"
                android:textColorHint="#A1887F"
                android:textSize="20sp"
                android:autofillHints="Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/re_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/custom_input"
                android:hint="@string/hint_RetypePassword"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:text="@string/tv_RetypePassword"
                android:textColor="#000000"
                android:textColorHint="#A1887F"
                android:textSize="20sp"
                android:autofillHints="Password"
                android:inputType="textPassword" />

        </LinearLayout>


    <Button
        android:id="@+id/change_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/round_btn"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/L_EditPassword" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>