<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceDetails">

    <include
        android:id="@+id/include11"
        layout="@layout/thp_top_toolbar_change_password_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/details_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/wave_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include11"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:text="@string/details"
                android:textColor="#C51E3A"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/starting_date_head"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInputEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/start_date_val"
                android:textColor="#000000" />
        </LinearLayout>

        <!--Service Date-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/ending_date_head"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInputEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/end_date_val"
                android:textColor="#000000" />
        </LinearLayout>

        <!--Venue-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/venue_head"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInputVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/venue_val"
                android:textColor="#000000" />
        </LinearLayout>

        <!--Sponsor-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvSponsor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/sponsor_head"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInputSponsor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/sponsor_value"
                android:textColor="#000000" />
        </LinearLayout>

        <!--Level of Events-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvLevelOfEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/level_ofevent_head"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInputLevelofEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="level_of_event_val"
                android:textColor="#000000" />
        </LinearLayout>

        <!--Total Credits-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvTotalCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/total_credit_head"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInputTotalCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/total_credit_val"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/wave_cont"
        layout="@layout/wave_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/details_cont"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>