<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminEditProfile">

    <include
        android:id="@+id/include11"
        layout="@layout/thp_top_toolbar_edit_account_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>

    <LinearLayout
        android:id="@+id/L_EditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include11"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/L_Personalinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/include11"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include11">


            <TextView
                android:id="@+id/tvPersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:text="@string/tvPersonalInfo"
                android:textColor="#C51E3A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:hint="@string/name"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:text="@string/tvMidName"
                android:textColor="#000000"
                android:textColorHint="#A1887F"
                android:textSize="20sp"
                android:autofillHints="First Name"
                android:inputType="text" />

            <EditText
                android:id="@+id/tvMidName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:hint="@string/middle_name"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:text="@string/tvMidName"
                android:textColor="#000000"
                android:textColorHint="#A1887F"
                android:autofillHints="surname"
                android:textSize="20sp"
                android:inputType="text" />

            <EditText
                android:id="@+id/tvSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:hint="@string/surname"
                android:autofillHints="name"
                android:paddingStart="12dp"
                android:paddingTop="5dp"
                android:paddingEnd="12dp"
                android:paddingBottom="5dp"
                android:text="@string/tvSurname"
                android:textColor="#000000"
                android:textColorHint="#A1887F"
                android:textSize="20sp"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/L_Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/L_Personalinfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/L_Personalinfo">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/tvGender"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioGroup
                    android:id="@+id/radio_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:onClick="checkBtn" >

                    <RadioButton
                        android:id="@+id/rb_local"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="100dp"
                        android:text="@string/RB_Male"
                        android:onClick="checkBtn"/>

                    <RadioButton
                        android:id="@+id/rb_international"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="10dp"
                        android:text="@string/RB_Female"
                        android:onClick="checkBtn"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        android:background="@drawable/round_btn"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/L_EditProfile"
        app:layout_constraintVertical_bias="0.52" />
</androidx.constraintlayout.widget.ConstraintLayout>